--- a/html/user_data/assets/css/customize.css
+++ b/html/user_data/assets/css/customize.css
@@ -1,1 +1,8 @@
 /* カスタマイズ用CSS */
+    .embeddedServiceHelpButton .helpButton .uiButton {
+        background-color: #005290;
+        font-family: "Arial", sans-serif;
+    }
+    .embeddedServiceHelpButton .helpButton .uiButton:focus {
+        outline: 1px solid #005290;
+    }
