--- a/src/Eccube/Resource/template/default/default_frame.twig
+++ b/src/Eccube/Resource/template/default/default_frame.twig
@@ -48,6 +48,7 @@ file that was distributed with this source code.
             });
         });
     </script>
+    <script type="text/javascript" src="//cdn.evgnet.com/beacon/nsugita1411569/engage/scripts/evergage.min.js"></script>
     {# Layout: HEAD #}
     {% if Layout.Head %}
         {{ include('block.twig', {'Blocks': Layout.Head}) }}
