--- a/src/Eccube/Resource/template/default/default_frame.twig
+++ b/src/Eccube/Resource/template/default/default_frame.twig
@@ -48,7 +48,9 @@ file that was distributed with this source code.
             });
         });
     </script>
-    <script type="text/javascript" async src="//cdn.evgnet.com/beacon/nsugita1411569/engage/scripts/evergage.min.js"></script>
+
+    <script type=“text/javascript” src=“//cdn.evgnet.com/beacon/nsugita1411569/otakefuniture/scripts/evergage.min.js”></script>
+    
     {# Layout: HEAD #}
     {% if Layout.Head %}
         {{ include('block.twig', {'Blocks': Layout.Head}) }}
