--- a/src/Eccube/Resource/template/default/Block/logo.twig
+++ b/src/Eccube/Resource/template/default/Block/logo.twig
@@ -14,7 +14,7 @@ file that was distributed with this source code.
             <div class="ec-headerTitle__title">
                 <h1>
                     <a href="{{ url('homepage') }}">
-                        {{ BaseInfo.shop_name }}
+                        <img src="{{ asset('/html/user_data/logo/OF_logo_4.png')}}" alt="Shop Logo">
                     </a>
                 </h1>
             </div>
