--- a/src/Eccube/Resource/template/default/Block/qrcode.twig
+++ b/src/Eccube/Resource/template/default/Block/qrcode.twig
@@ -1,6 +1,11 @@
 <img
+  src="https://res.cloudinary.com/hasdqmkmz/image/upload/v1637053891/line_f_btn_dr78bk.png"
+  width="64"
+  alt="LINEお友だち"
+><br />
+<img
   id="qr-code"
   src="https://res.cloudinary.com/hasdqmkmz/image/upload/v1637053149/qrcode_kjb67y.png"
   width="64"
-  alt="LINEお友だち"
+  alt="LINEお友だちQRコード"
 >
