--- a/src/Eccube/Resource/template/default/default_frame.twig
+++ b/src/Eccube/Resource/template/default/default_frame.twig
@@ -50,6 +50,7 @@ file that was distributed with this source code.
     </script>
 
     <script type="text/javascript" async src="//cdn.evgnet.com/beacon/nsugita1411569/otakefuniture/scripts/evergage.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/medium-zoom@1.0.6/dist/medium-zoom.min.js"></script>
     
     {# Layout: HEAD #}
     {% if Layout.Head %}
