--- a/src/Eccube/Resource/template/default/Product/detail.twig
+++ b/src/Eccube/Resource/template/default/Product/detail.twig
@@ -116,6 +116,7 @@ file that was distributed with this source code.
 
         embedded_svc.settings.enabledFeatures = ['LiveAgent'];
         embedded_svc.settings.entryFeature = 'LiveAgent';
+        embedded_svc.settings.chatbotAvatarImgURL = 'https://i.imgur.com/fKAtqqA.png';
 
         embedded_svc.init(
             'https://mcsvcplatform-dev-ed.my.salesforce.com',
