--- a/src/Eccube/Resource/template/default/Product/detail.twig
+++ b/src/Eccube/Resource/template/default/Product/detail.twig
@@ -15,6 +15,8 @@ file that was distributed with this source code.
 {% block stylesheet %}
     <style>
 
+        .fieldList .inputSplitName:nth-of-type(1) {  float: right; } 
+
         .slick-slider {
             margin-bottom: 30px;
         }
